typee_err_395.txt
  File "/tmp/typee_395.py", line 86
    sim = mp.Simulation(cell_size=cell,
                       ^
SyntaxError: '(' was never closed
